package es.usantatecla.aX_dispensers.a6_interfaces;

interface Iterator {

	public boolean hasNext();
	public Interval next();
	
}

